--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 :root{
+    color-scheme: light;
     --web-body-font:18px;
     --mobile-body-font:14px;
     --mobile-heading-font:16px;
